# tinkoff_detox

./: .gitignore  README.md  alembic.ini  database.db  ml.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2024_04_14_0012-71ea8ea1e311_.py  2024_04_14_0142-c8f5d2e8cfe9_.py  2024_04_14_0143-4f681a57add4_.py  2024_04_14_0148-11845cf46d91_.py  2024_04_14_1239-039a15961202_.py  2024_04_14_1408-746295c10e3b_.py
tinkoff_detox/: __init__.py  app.py  config.py  database.py
tinkoff_detox/model/: ml.py  parser.py  routes.py
tinkoff_detox/tokens/: dependencies.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py
tinkoff_detox/users/: dependencies.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py
