[tool.poetry]
name = "tinkoff-detox"
version = "0.1.0"
description = ""
authors = ["saladware <saladware46@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.19.0"
moviepy = "^1.0.3"
faster-whisper = "^1.0.1"
detoxify = "^0.5.2"
deep-translator = "^1.11.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
